<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GPSAPlantActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblGPSAPlant" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtDescription"
        android:layout_below="@+id/textView1"
        android:text="@string/lblDescription" />

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblSelectAPlant"
        android:layout_below="@+id/textView2"
        android:ems="10" />

    <TextView
        android:id="@+id/lblLatitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblSelectAPlant"
        android:layout_below="@+id/lblSelectAPlant"
        android:text="@string/lblLaditudeLable" />

    <Button
        android:id="@+id/lblSelectAPlant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtDescription"
        android:onClick="searchClicked"
        android:text="@string/lblSelectAPlan" />

    <TextView
        android:id="@+id/lblLaditude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblLatitudeLabel"
        android:layout_alignBottom="@+id/lblLatitudeLabel"
        android:layout_toRightOf="@+id/lblLatitudeLabel"
        android:text="@string/blank" />

    <TextView
        android:id="@+id/lblLongitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblLatitudeLabel"
        android:layout_below="@+id/lblLatitudeLabel"
        android:text="@string/lblLongitudeLable" />

    <TextView
        android:id="@+id/lblLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblLatitudeLabel"
        android:layout_toRightOf="@+id/lblLatitudeLabel"
        android:text="@string/blank" />

</RelativeLayout>